# smart-control-system

./: CMakeLists.txt  partitions.csv  pc_inference.py  sdkconfig.defaults  train_model.py
components/APDS9960/: CMakeLists.txt  apds9960.c
components/APDS9960/include/: apds9960.h
components/CAMERA/: CMakeLists.txt  camera.c
components/CAMERA/include/: camera.h
components/LCD/: CMakeLists.txt  lcd.c
components/LCD/include/: lcd.h
components/SPI/: spi.c
components/SPI/include/: spi.h
components/led/: led.c
components/led/include/: led.h
main/: CMakeLists.txt  idf_component.yml  main.c
main/model-parameters/: model_metadata.h  model_variables.h
main/tflite-model/: tflite_learn_1011709_3_compiled.cpp
model/: README.txt
model/tflite-model/: tflite_learn_1011709_3_compiled.h
model_trained/: labels.txt
